@@ -127,7 +127,7 @@ static bool convert_PyObject_to_Kmer(PyObject * value,
         return true;
     } else if (PyUnicode_Check(value))  {
         std::string s = PyBytes_AsString(PyUnicode_AsEncodedString(
-                                            value, "utf-8", "strict"));
+                                             value, "utf-8", "strict"));
         if (strlen(s.c_str()) != ksize) {
             PyErr_SetString(PyExc_ValueError,
                             "k-mer length must equal the k-mer size");
@@ -161,8 +161,8 @@ static bool convert_PyObject_to_Kmer(PyObject * value,
 // that checks this.
 
 static bool convert_PyObject_to_HashIntoType(PyObject * value,
-                                             HashIntoType& hashval,
-                                             WordLength ksize)
+        HashIntoType& hashval,
+        WordLength ksize)
 {
     if (PyInt_Check(value) || PyLong_Check(value)) {
         if (PyLong_Check(value)) {
@@ -173,7 +173,7 @@ static bool convert_PyObject_to_HashIntoType(PyObject * value,
         return true;
     } else if (PyUnicode_Check(value))  {
         std::string s = PyBytes_AsString(PyUnicode_AsEncodedString(
-                                            value, "utf-8", "strict"));
+                                             value, "utf-8", "strict"));
         if (strlen(s.c_str()) != ksize) {
             PyErr_SetString(PyExc_ValueError,
                             "k-mer length must equal the k-mer size");
@@ -906,7 +906,7 @@ static PyObject * khmer_HashSet_iter(PyObject * self)
 {
     khmer_HashSet_Object * me = (khmer_HashSet_Object *) self;
     _HashSet_iterobj * iter_obj = (_HashSet_iterobj *)
-        _HashSet_iter_Type.tp_alloc(&_HashSet_iter_Type, 0);
+                                  _HashSet_iter_Type.tp_alloc(&_HashSet_iter_Type, 0);
     if (iter_obj != NULL) {
         Py_INCREF(me);
         iter_obj->parent = me;
@@ -931,7 +931,7 @@ static PyObject * khmer_HashSet_concat(khmer_HashSet_Object * o,
         return NULL;
     }
     khmer_HashSet_Object * no = create_HashSet_Object(new SeenSet,
-                                                      o->ksize);
+                                o->ksize);
     no->hashes->insert(o->hashes->begin(), o->hashes->end());
     no->hashes->insert(o2->hashes->begin(), o2->hashes->end());
 
@@ -939,7 +939,7 @@ static PyObject * khmer_HashSet_concat(khmer_HashSet_Object * o,
 }
 
 static PyObject * khmer_HashSet_concat_inplace(khmer_HashSet_Object * o,
-                                               khmer_HashSet_Object * o2)
+        khmer_HashSet_Object * o2)
 {
     if (o->ksize != o2->ksize) {
         PyErr_SetString(PyExc_ValueError,
@@ -1025,7 +1025,7 @@ hashset_update(khmer_HashSet_Object * me, PyObject * args)
             return NULL;
         }
         me->hashes->insert(h);
-        
+
         Py_DECREF(item);
         item = PyIter_Next(iterator);
     }
@@ -1116,7 +1116,7 @@ static khmer_HashSet_Object * create_HashSet_Object(SeenSet * h, WordLength k)
     khmer_HashSet_Object * self;
 
     self = (khmer_HashSet_Object *)
-        khmer_HashSet_Type.tp_alloc(&khmer_HashSet_Type, 0);
+           khmer_HashSet_Type.tp_alloc(&khmer_HashSet_Type, 0);
     if (self != NULL) {
         self->hashes = h;
         self->ksize = k;
@@ -1519,14 +1519,14 @@ hashtable_traverse_linear_path(khmer_KHashtable_Object * me, PyObject * args)
     SeenSet * adj = new SeenSet;
     SeenSet * visited = new SeenSet;
     unsigned int size = hashtable->traverse_linear_path(start_kmer,
-                                                        *adj, *visited,
-                                                        *nodegraph_o->hashbits,
-                                                        *hdn_o->hashes);
+                        *adj, *visited,
+                        *nodegraph_o->hashbits,
+                        *hdn_o->hashes);
 
     khmer_HashSet_Object * adj_o = create_HashSet_Object(adj,
-                                                         hashtable->ksize());
+                                   hashtable->ksize());
     khmer_HashSet_Object * visited_o = create_HashSet_Object(visited,
-                                                           hashtable->ksize());
+                                       hashtable->ksize());
 
     PyObject * ret = Py_BuildValue("kOO", (unsigned long) size,
                                    (PyObject *) adj_o, (PyObject *) visited_o);
@@ -1691,7 +1691,7 @@ hashtable_find_all_tags_list(khmer_KHashtable_Object * me, PyObject * args)
     Py_END_ALLOW_THREADS
 
     PyObject * x = (PyObject *) create_HashSet_Object(tags,
-                                                      hashtable->ksize());
+                   hashtable->ksize());
     return x;
 }
 
@@ -2698,7 +2698,7 @@ hashtable_divide_tags_into_subsets(khmer_KHashtable_Object * me,
     hashtable->divide_tags_into_subsets(subset_size, *divvy);
 
     PyObject * x = (PyObject *) create_HashSet_Object(divvy,
-                                                      hashtable->ksize());
+                   hashtable->ksize());
     return x;
 }
 
@@ -2833,7 +2833,8 @@ hashtable_get_kmer_hashes(khmer_KHashtable_Object * me, PyObject * args)
 
 static
 PyObject *
-hashtable_get_kmer_hashes_as_hashset(khmer_KHashtable_Object * me, PyObject * args)
+hashtable_get_kmer_hashes_as_hashset(khmer_KHashtable_Object * me,
+                                     PyObject * args)
 {
     Hashtable * hashtable = me->hashtable;
     const char * sequence;
@@ -2846,7 +2847,7 @@ hashtable_get_kmer_hashes_as_hashset(khmer_KHashtable_Object * me, PyObject * ar
     hashtable->get_kmer_hashes_as_hashset(sequence, *hashes);
 
     PyObject * x = (PyObject *) create_HashSet_Object(hashes,
-                                                      hashtable->ksize());
+                   hashtable->ksize());
 
     return x;
 }
@@ -3390,7 +3391,7 @@ count_abundance_distribution(khmer_KCountingHash_Object * me, PyObject * args)
     const char         *value_exception = NULL;
     const char         *file_exception  = NULL;
     std::string exc_string;
-    
+
     Py_BEGIN_ALLOW_THREADS
     try {
         dist = counting->abundance_distribution(filename, hashbits);
@@ -4014,7 +4015,7 @@ labelhash_consume_fasta_and_tag_with_labels(khmer_KGraphLabels_Object * me,
     unsigned long long  n_consumed      = 0;
     unsigned int        total_reads     = 0;
     std::string exc_string;
-    
+
     //Py_BEGIN_ALLOW_THREADS
     try {
         hb->consume_fasta_and_tag_with_labels(filename, total_reads,
@@ -4203,7 +4204,7 @@ labelhash_sweep_tag_neighborhood(khmer_KGraphLabels_Object * me,
     //Py_END_ALLOW_THREADS
 
     PyObject * x = (PyObject *) create_HashSet_Object(tagged_kmers,
-                                                   labelhash->graph->ksize());
+                   labelhash->graph->ksize());
     return x;
 }
 
