@@ -1,7 +1,7 @@
 /*
 This file is part of khmer, https://github.com/dib-lab/khmer/, and is
 Copyright (C) 2010-2015, Michigan State University.
-Copyright (C) 2015, The Regents of the University of California.
+Copyright (C) 2015-2016, The Regents of the University of California.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
@@ -155,7 +155,7 @@ public:
             unsigned char bit = (unsigned char)(1 << (bin % 8));
 
             unsigned char bits_orig = __sync_fetch_and_or( *(_counts + i) +
-                                                           byte, bit );
+                                      byte, bit );
             if (!(bits_orig & bit)) {
                 if (i == 0) {
                     __sync_add_and_fetch( &_occupied_bins, 1 );
