@@ -110,7 +110,7 @@ HashIntoType _hash(const std::string kmer, const WordLength k)
 }
 
 HashIntoType _hash(const std::string kmer, const WordLength k,
-                    HashIntoType& h, HashIntoType& r)
+                   HashIntoType& h, HashIntoType& r)
 {
     return _hash(kmer.c_str(), k, h, r);
 }
