@@ -78,7 +78,8 @@ public:
                                 std::function<bool (Kmer&)> filter=0);
     unsigned int traverse(Kmer& node,
                           KmerQueue &node_q,
-                          std::function<bool (Kmer&)> filter=0) {
+                          std::function<bool (Kmer&)> filter=0)
+    {
         unsigned int found;
         found = traverse_left(node, node_q, filter);
         found += traverse_right(node, node_q, filter);
