@@ -6,9 +6,7 @@
 # Contact: khmer-project@idyll.org
 #
 # pylint: disable=missing-docstring,no-member
-"""
-Common functions for partitioning
-"""
+"""Common functions for partitioning."""
 from __future__ import print_function, absolute_import, unicode_literals
 
 import sys
